Fixed catagories issue on mobile

--- a/styles/custom.less
+++ b/styles/custom.less
@@ -114,6 +114,7 @@ body {
   div.ProductList-grid.clear {
     position: relative !important;
     z-index: 0 !important;
+    margin-top: 0 !important;
   }
 
   .image-block-wrapper {
@@ -130,8 +131,6 @@ body {
 .ProductList-grid {
   position: relative !important;
   margin-top: 150px;
-
-
 }
 
 .ProductList-item {
